cmake_minimum_required(VERSION 3.15)
project(testForClion)

set(CMAKE_CXX_STANDARD 14)

add_executable(testForClion Clion2git.cpp Qtwenty2.cpp)
add_executable(testForque Qtwenty2.cpp Qtwente4.cpp Qtwenty5.cpp Qhunderd124.cpp Qtwenty6.cpp Qtwenty7.cpp Q4.cpp Qtwenty8.cpp Qtwenty9.cpp Qthirty0.cpp Qthirty2-1.cpp Qthirty2-2.cpp Qthirty2-3.cpp Qthirty1.cpp Qthirty3.cpp Qthirty4.cpp Qthirty5.cpp Qthirt6.cpp Qthirty7.cpp Qthirty8.cpp Qthirty9.cpp Qforty.cpp Qforty1.cpp Qforty2.cpp Qforty3.cpp Qforty4.cpp Qforty5.cpp Qforty6.cpp Qforty8.cpp Qforty9.cpp Qfifty0.cpp Qfifty1.cpp Qfifty2.cpp Qfifty3.cpp Qfifty3II.cpp Qfifty4.cpp Qfifty5.cpp Qfifty5II.cpp Qfifty6.cpp Qfifty6II.cpp)
add_executable(testFor47 Qforty7.cpp)